{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 13,
  "lineage": "e46116c5-d3c7-251a-5a5b-63b1ab9313fc",
  "resources": [
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-app-01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-app-01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-app-01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0975628249d7e8952",
            "arn": "arn:aws:ec2:sa-east-1:423623839339:instance/i-0ac205a0435ea4249",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac205a0435ea4249",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "sba-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e5dfb7ec7c74bfc",
            "private_dns": "ip-10-1-16-39.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:sa-east-1:423623839339:key/3823cf90-dfbc-4bf8-bd14-b905c468e5c0",
                "throughput": 200,
                "volume_id": "vol-08328ead3f362c291",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3df0eababc8fde0",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-app-01",
              "Terraform": "true",
              "owner": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-app-01",
              "Terraform": "true",
              "owner": "shoaib"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "sba-preprod-app-01"
            },
            "vpc_security_group_ids": [
              "sg-0ca1e204826fc3bf3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.aws_iam_role.this",
            "module.ec2.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance.data.aws_partition.current",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-cron\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-cron\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-cron\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0975628249d7e8952",
            "arn": "arn:aws:ec2:sa-east-1:423623839339:instance/i-04db6b52806502bf8",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04db6b52806502bf8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "sba-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e4a1a6675a2e1ca",
            "private_dns": "ip-10-1-16-55.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:sa-east-1:423623839339:key/3823cf90-dfbc-4bf8-bd14-b905c468e5c0",
                "throughput": 200,
                "volume_id": "vol-0dd7c22a822693f06",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3df0eababc8fde0",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-cron",
              "Terraform": "true",
              "owner": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-cron",
              "Terraform": "true",
              "owner": "shoaib"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "sba-preprod-cron"
            },
            "vpc_security_group_ids": [
              "sg-0ca1e204826fc3bf3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.aws_iam_role.this",
            "module.ec2.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance.data.aws_partition.current",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-sftp\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-sftp\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2.module.ec2_instance[\"sba-preprod-sftp\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d1bc0e151921904",
            "arn": "arn:aws:ec2:sa-east-1:423623839339:instance/i-0f1991df356ee9657",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-role",
            "id": "i-0f1991df356ee9657",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "sba-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ce13f53861202a8c",
            "private_dns": "ip-10-1-16-37.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.37",
            "public_dns": "ec2-18-230-253-21.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.253.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:sa-east-1:423623839339:key/3823cf90-dfbc-4bf8-bd14-b905c468e5c0",
                "throughput": 200,
                "volume_id": "vol-078efd0d9fa24ea59",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3df0eababc8fde0",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-sftp",
              "Terraform": "true",
              "owner": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-sftp",
              "Terraform": "true",
              "owner": "shoaib"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "sba-preprod-sftp"
            },
            "vpc_security_group_ids": [
              "sg-0ca1e204826fc3bf3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.aws_iam_role.this",
            "module.ec2.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance.data.aws_partition.current",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:security-group/sg-075a45f59fa85887c",
            "description": "Security group for RDS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075a45f59fa85887c",
            "ingress": [
              {
                "cidr_blocks": [
                  "12.1.0.0/25"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "423623839339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "preprod",
              "Name": "rds-sg"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0040befee7e6016c3",
            "arn": "arn:aws:ec2:sa-east-1:423623839339:elastic-ip/eipalloc-0040befee7e6016c3",
            "domain": "vpc",
            "id": "eipalloc-0040befee7e6016c3",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-232-111-33.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.232.111.33",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:network-acl/acl-00bf49cdce5de0ecc",
            "default_network_acl_id": "acl-00bf49cdce5de0ecc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00bf49cdce5de0ecc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "423623839339",
            "subnet_ids": [
              "subnet-013857c9224d8cfc3",
              "subnet-029b59ea7d1710878",
              "subnet-0489968f2494d7f02",
              "subnet-06466574dd39cfb33",
              "subnet-072e4a96d51bebd20",
              "subnet-074e52b0b6ae7858f",
              "subnet-09ce07b40870fa140",
              "subnet-0f3df0eababc8fde0"
            ],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-default",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-default",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:route-table/rtb-0eea1833a3a920d6f",
            "default_route_table_id": "rtb-0eea1833a3a920d6f",
            "id": "rtb-0eea1833a3a920d6f",
            "owner_id": "423623839339",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-default",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-default",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:security-group/sg-0ca1e204826fc3bf3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ca1e204826fc3bf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "206.192.38.5/32",
                  "94.200.155.18/32"
                ],
                "description": "",
                "from_port": 7390,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7390
              },
              {
                "cidr_blocks": [
                  "94.200.155.18/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "423623839339",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-default",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-default",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:internet-gateway/igw-099a49f9f309410e0",
            "id": "igw-099a49f9f309410e0",
            "owner_id": "423623839339",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-099a49f9f309410e0",
            "id": "r-rtb-03d24c25599b9d32b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d24c25599b9d32b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:route-table/rtb-06ae259c7aa3700b7",
            "id": "rtb-06ae259c7aa3700b7",
            "owner_id": "423623839339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099a49f9f309410e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:route-table/rtb-00e8f084b46649908",
            "id": "rtb-00e8f084b46649908",
            "owner_id": "423623839339",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1b",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1b",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:route-table/rtb-04329ab5916220aee",
            "id": "rtb-04329ab5916220aee",
            "owner_id": "423623839339",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1c",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1c",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:route-table/rtb-0e6dde94705886f65",
            "id": "rtb-0e6dde94705886f65",
            "owner_id": "423623839339",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:route-table/rtb-03d24c25599b9d32b",
            "id": "rtb-03d24c25599b9d32b",
            "owner_id": "423623839339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099a49f9f309410e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c893241d8bb35cc",
            "route_table_id": "rtb-06ae259c7aa3700b7",
            "subnet_id": "subnet-0f3df0eababc8fde0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083ee01c1c55e3bbf",
            "route_table_id": "rtb-00e8f084b46649908",
            "subnet_id": "subnet-0489968f2494d7f02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e666b4ccee2eb42b",
            "route_table_id": "rtb-04329ab5916220aee",
            "subnet_id": "subnet-06466574dd39cfb33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fab271006c9aac6",
            "route_table_id": "rtb-0e6dde94705886f65",
            "subnet_id": "subnet-072e4a96d51bebd20"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ab578b18d23a9f",
            "route_table_id": "rtb-03d24c25599b9d32b",
            "subnet_id": "subnet-013857c9224d8cfc3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a458a61eb88870d",
            "route_table_id": "rtb-03d24c25599b9d32b",
            "subnet_id": "subnet-09ce07b40870fa140"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c97f1391f02cd8b",
            "route_table_id": "rtb-03d24c25599b9d32b",
            "subnet_id": "subnet-029b59ea7d1710878"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041dfbe9b53b0522d",
            "route_table_id": "rtb-03d24c25599b9d32b",
            "subnet_id": "subnet-074e52b0b6ae7858f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-0f3df0eababc8fde0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.16.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3df0eababc8fde0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-0489968f2494d7f02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.16.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0489968f2494d7f02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1b",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1b",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-06466574dd39cfb33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.1.16.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06466574dd39cfb33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1c",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1c",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-072e4a96d51bebd20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.16.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072e4a96d51bebd20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-private-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-013857c9224d8cfc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.16.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013857c9224d8cfc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-09ce07b40870fa140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.16.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce07b40870fa140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1b",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1b",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-029b59ea7d1710878",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.1.16.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029b59ea7d1710878",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1c",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1c",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:subnet/subnet-074e52b0b6ae7858f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.16.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074e52b0b6ae7858f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623839339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc-public-sa-east-1a",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "vpc_id": "vpc-00d11db97c66c3eb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:423623839339:vpc/vpc-00d11db97c66c3eb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.16.0/24",
            "default_network_acl_id": "acl-00bf49cdce5de0ecc",
            "default_route_table_id": "rtb-0eea1833a3a920d6f",
            "default_security_group_id": "sg-0ca1e204826fc3bf3",
            "dhcp_options_id": "dopt-0b0804d282ab7eb30",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d11db97c66c3eb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eea1833a3a920d6f",
            "owner_id": "423623839339",
            "tags": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc",
              "Terraform": "true",
              "created-by": "shoaib"
            },
            "tags_all": {
              "Environment": "preprod",
              "Name": "sba-preprod-vpc",
              "Terraform": "true",
              "created-by": "shoaib"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}